syntax = "proto3";

package io.github.microcks.grpc.hello.v1;

option java_multiple_files = true;

import "google/api/annotations.proto";
import "google/api/http.proto";

message HelloRequest {
    string firstname = 1;
    string lastname = 2;
}

message HelloResponse {
    string greeting = 1;
}

service HelloService {
    rpc greeting(HelloRequest) returns (HelloResponse){
        option (google.api.http) = {
            post: "/v1/hello/"
            body: "*"
        };
    }
}